testsuite/tests/typecheck/should_fail/T7697.hs
module T7697 where

f :: Int => Int
f x = x
